Updated description of day 23, introduced AoC library, and did some refactoring